New navbar navigation. Reogranization of utilities structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
-<nav class="navbar navbar-dark bg-showsourcing-dark">
-      <img src="assets/logo/logo.svg"
-      class="Logo">
-      <p class="title-showsourcing"><strong>{{title.bold}}</strong>{{title.normal}}</p>
-</nav>
+<app-navbar></app-navbar>
 <div class="container-fluid">
   <app-list></app-list>
 </div>
