--- a/src/app/list/list.component.css
+++ b/src/app/list/list.component.css
@@ -17,3 +17,21 @@
 div {
   margin-top: 2%;
 }
+
+select {
+    border:none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    -ms-appearance: none; /* get rid of default appearance for IE8, 9 and 10*/
+    outline: none;
+}
+
+select:focus {
+  color: #9013fe;
+  text-decoration: underline;
+}
+
+select:focus option {
+  color: #6c757d;
+}
