--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -7,7 +7,11 @@
     <p>{{product.name}}</p>
   </div>
   <div class="col-md-2 text-secondary">
-    <p>{{product.category.name}}</p>
+    <select >
+      <option  *ngFor="let category of categories | async">
+        {{category.name}}
+      </option>
+    </select>
   </div>
   <div class="col-md-3 text-secondary">
     <p>{{product.supplier.name}}</p>
