--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -4,6 +4,7 @@
 }
 
 .navbar-brand {
+  padding-left: 1%;
   padding-top: 0;
 }
 
@@ -14,9 +15,4 @@
   font-size: 15px;
   text-align: left;
   color: #ffffff;
-}
-
-.container-fluid {
-    padding-right: 80px;
-    padding-left: 80px;
 }
