Language translation implemented

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,4 +1,4 @@
-<h2 class="h2-showsourcing"> {{title}} </h2>
+<h2 class="h2-showsourcing"> {{'PRODUCTLIST_TITLE' | translate}} </h2>
 <div id="productList" *ngFor="let product of products | async">
   <div class="row">
     <div id="productImage" class="col-md-1">
