--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <a class="navbar-brand" href="#">
     <img class="Logo" src="assets/logo/logo.svg">
     <span class="title-showsourcing">
-       <strong>{{title.bold}}</strong>{{title.normal}}
+       <strong>{{ 'NAV_TITLE_BOLD' | translate }}</strong>{{ 'NAV_TITLE' | translate }}
      </span>
   </a>
   <ul class="navbar-nav justify-content-end">
