--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -9,7 +9,7 @@
     </div>
     <div id="productCategory" class="col-md-2 text-gray-showsourcing">
       <select>
-        <option *ngFor="let category of categories | async">
+        <option *ngFor="let category of categories">
           {{category.name}}
         </option>
       </select>
