--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,9 +5,9 @@
        <strong>{{ 'NAV_TITLE_BOLD' | translate }}</strong>{{ 'NAV_TITLE' | translate }}
      </span>
   </a>
-  <ul class="navbar-nav justify-content-end">
-    <li class="nav-item">
-      <a class="nav-link" href="#"></a>
+  <ul class="navbar-nav justify-content-end" >
+    <li class="nav-item" >
+      <a class="nav-link" href="#">{{users.firstName}}</a>
     </li>
   </ul>
 </nav>
