--- a/src/app/list/list.component.css
+++ b/src/app/list/list.component.css
@@ -14,6 +14,7 @@
 
 }
 
+/*this spacing is applied to every individual div witht he id productList */
 div #productList {
   margin-top: 1%;
   margin-bottom: 1%;
